@@ -1,3 +1,8 @@
+2002-06-26  Glynn Foster  <glynn.foster@sun.com>
+
+	* splac.c: (main): Fix from Jochen Voss to exit after errors.
+	Fixes #68014.
+
 2000-07-19  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* splac.c: Added #include <unistd.h> for write().
